[metadata]
name = example 
version = 2013.2
summary = App Store 
author = JimJiang
author-email = wentian@unitedstack.com 
home-page = http://www.ustack.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    example 
