[metadata]
name = koala
version = 2015.1
summary = Openstack Billing Project
author = DeliangFan
author-email = vanderliang@gmail.com 
home-page = https://github.com/DeliangFan
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    koala

[entry_points]
console_scripts =
    koala-api = koala.cmd.api:main
    koala-manage = koala.cmd.manage:main
